clusters/Azure/YAML/namespace.yaml
# namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: <NAMESPACE>
