clusters/Azure/YAML/hive-metastore-postgres.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hive-metastore-postgres
  labels:
    app: hive-pod
spec:
  nodeSelector:
    pod: "hive"
    role: "metastore"
  serviceAccountName: trino

  volumes:
    - name: hive-site-config
      configMap:
        name: hive-site-config
    - name: core-site-config
      configMap:
        name: core-site-config
    - name: hms-warehouse
      emptyDir: {}
    - name: auxlib
      emptyDir: {}   # will hold the Postgres JDBC jar

  containers:
    - name: hive-metastore
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: false
        capabilities:
          drop:
            - MKNOD
      image: apache/hive:standalone-metastore-4.1.0 # Requires a different HMS version for ABFS compatability
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 9083

      volumeMounts:
        - name: hive-site-config
          mountPath: /opt/hive/conf/hive-site.xml
          subPath: hive-site.xml
        - name: core-site-config
          mountPath: /etc/hadoop/conf/core-site.xml
          subPath: core-site.xml
        - name: hms-warehouse
          mountPath: /tmp/hive/warehouse
        - name: auxlib
          mountPath: /opt/hive/auxlib

      command: ["/bin/bash","-lc"]
      args:
        - |
          [...]
    - name: postgres
      image: postgres:13
      ports:
        - containerPort: 5432
      resources:
        requests: { cpu: "500m", memory: "0.5Gi" }
        limits:   { cpu: "500m", memory: "0.5Gi" }
