clusters/Azure/YAML/hive-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hive-metastore
spec:
  type: ClusterIP
  selector:
    app: hive-pod
  ports:
    - port: 9083
      targetPort: 9083
      protocol: TCP
