clusters/Azure/YAML/trino-worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trino-worker-service
  labels:
    service-app: trino
spec:
  clusterIP: None
  selector:
    app: trino-worker
  ports:
    - name: trino-worker
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: metrics
      protocol: TCP
      port: 9090
      targetPort: 9090
